--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <main>
   <form action="/" method="post">
     <input type="text" placeholder="programming language" name="planguage" />
-    <button type="submit">Add</button>
+    <button type="submit">Send</button>
   </form>
   <ul>
     <%if(plNames){ %> <%for(let x=0; x< plNames.length;x++){%>
