contact text changed

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%- include("lout/heds") %>
 <main>
-  <h1>Henry Jewels</h1>
+  <h1>Network</h1>
   <p>Amsterdam, NetherLands</p>
 </main>
 <%- include("lout/footer") %>
