contact rights  changed

--- a/views/lout/footer.ejs
+++ b/views/lout/footer.ejs
@@ -1,3 +1,3 @@
-<footer class="center">All rights reserved by &copy; Henry Jewels</footer>
+<footer class="center">All rights reserved by &copy; Network</footer>
   </body>
 </html>
